plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'com.google.devtools.ksp'
}

def static buildTime() {
    return new Date().format("yyyyMMdd_HHmm", TimeZone.getTimeZone("GMT+08:00"))
}

def getSigningConfig() {
    // 优先级：环境变量 > 本地 keystore.properties > 临时签名
    def config = [:]

    // 1. 尝试从环境变量读取（GitHub Actions 使用）
    config.storeFile = System.getenv("SIGNING_KEYSTORE_FILE")
    config.storePassword = System.getenv("SIGNING_STORE_PASSWORD")
    config.keyAlias = System.getenv("SIGNING_KEY_ALIAS")
    config.keyPassword = System.getenv("SIGNING_KEY_PASSWORD")

    // 2. 如果环境变量不存在，尝试从本地文件读取
    if (config.storeFile == null || config.storeFile.isEmpty()) {
        // 先检查 app 目录下的 keystore.properties
        def keystorePropsFile = project.file("keystore.properties")
        if (!keystorePropsFile.exists()) {
            // 再检查根目录
            keystorePropsFile = rootProject.file("keystore.properties")
        }
        if (keystorePropsFile.exists()) {
            def keystoreProps = new Properties()
            keystoreProps.load(new FileInputStream(keystorePropsFile))
            config.storeFile = keystoreProps['storeFile']
            config.storePassword = keystoreProps['storePassword']
            config.keyAlias = keystoreProps['keyAlias']
            config.keyPassword = keystoreProps['keyPassword']
        }
    }

    return config
}

android {
    namespace = 'com.github.tvbox.osc'
    compileSdk = 36

    signingConfigs {
        release {
            def config = getSigningConfig()
            if (config.storeFile != null && !config.storeFile.isEmpty()) {
                storeFile = file(config.storeFile)
                storePassword = config.storePassword
                keyAlias = config.keyAlias
                keyPassword = config.keyPassword
            }
        }
    }

    defaultConfig {
        applicationId = 'com.github.tvbox.osc.debug'
        targetSdkVersion = 34
        versionCode = 1
        versionName = "1.0.".concat(buildTime())
        multiDexEnabled = true
        minSdkVersion = 24
    }

    packagingOptions {
        exclude 'META-INF/DEPENDENCIES'
        jniLibs {
            useLegacyPackaging = true
            excludes += ['lib/armeabi/**', 'lib/x86/**', 'lib/x86_64/**', 'lib/mips/**', 'lib/mips64/**']
        }
    }

    buildTypes {
        release {
            minifyEnabled = false
            shrinkResources = false
            zipAlignEnabled = true
            signingConfig = signingConfigs.release
        }
    }

    // 构建后删除 ProGuard 映射文件
    applicationVariants.configureEach { variant ->
        if (variant.buildType.name == 'release') {
            variant.getAssembleProvider().configure {
                it.doLast {
                    delete fileTree(dir: "$buildDir/outputs/mapping/${variant.name}", include: '**/mapping.txt')
                    delete fileTree(dir: "$buildDir/outputs/mapping/${variant.name}", include: '**/seeds.txt')
                    delete fileTree(dir: "$buildDir/outputs/mapping/${variant.name}", include: '**/usage.txt')
                    delete fileTree(dir: "$buildDir/outputs/mapping/${variant.name}", include: '**/resources.txt')
                }
            }
        }
    }

    flavorDimensions = ["abi", "brand"]
    productFlavors {
        arm64 {
            dimension = "abi"
            ndk {
                abiFilters 'arm64-v8a'
            }
        }

        arm32 {
            dimension = "abi"
            ndk {
                abiFilters 'armeabi-v7a'
            }
        }

        generic  {
            dimension = "brand"
        }
    }
    applicationVariants.configureEach { variant ->
        variant.outputs.configureEach { output ->
            def flavorNames = variant.productFlavors.collect { it.name }.join('-')
            def fileName = "TVBox_${variant.buildType.name}-${flavorNames}.apk"
            outputFileName = fileName
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
        coreLibraryDesugaringEnabled = true
    }

    kotlinOptions {
        jvmTarget = '21'
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += ['-Xlint:deprecation', '-Xlint:unchecked']
    }

    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
        compilerOptions {
            // Kotlin 2.x 默认已输出 deprecation/unchecked 警告，无需额外 flag
        }
    }

    buildFeatures {
        dataBinding = true
        buildConfig = true
    }

    lint {
        checkReleaseBuilds = false
        abortOnError = false
        disable 'UnsafeOptInUsageError'
    }
}

ksp {
    arg("room.schemaLocation", "$projectDir/schemas".toString())
}

dependencies {
    constraints {
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
        }
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
        }
    }
    api fileTree(dir: "libs", include: ['*.jar', '*.aar'])
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation('com.github.thegrizzlylabs:sardine-android:0.8') {
        exclude group: 'com.squareup.okhttp3'
    }
    implementation 'com.github.NanoHttpd.nanohttpd:nanohttpd:nanohttpd-project-2.3.1'
    implementation 'com.github.NanoHttpd.nanohttpd:nanohttpd:nanohttpd-websocket-2.3.1'
    implementation 'com.google.zxing:core:3.5.4'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.11.0'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.11.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.11.0'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'com.google.android.material:material:1.14.0'
    implementation project(path: ':quickjs')
    implementation project(":pyramid")

    ksp 'androidx.room:room-compiler:2.8.4'
    implementation 'com.github.alidili:FlowLayout:v1.5'
    implementation 'androidx.room:room-runtime:2.8.4'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
    implementation 'com.squareup.okio:okio:3.17.0'
    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.49-androidx'
    implementation 'com.kingja.loadsir:loadsir:1.3.8'
    implementation 'com.google.code.gson:gson:2.14.0'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'com.google.j2objc:j2objc-annotations:3.1'
    implementation 'org.jspecify:jspecify:1.0.0'
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    ksp 'com.github.bumptech.glide:compiler:4.16.0'
    implementation('me.jessyan:autosize:1.2.1') {
        exclude group: 'com.android.support'
    }
    implementation('com.thoughtworks.xstream:xstream:1.4.21') {
        exclude group: 'xmlpull', module: 'xmlpull'
    }
    implementation 'org.greenrobot:eventbus:3.3.1'
    implementation 'com.orhanobut:hawk:2.0.1'
    implementation 'net.sourceforge.streamsupport:android-retrofuture:1.7.4'
    implementation 'androidx.annotation:annotation:1.10.0'
    def media3_version = "1.10.1"
    implementation "androidx.media3:media3-exoplayer:$media3_version"
    implementation "androidx.media3:media3-ui:$media3_version"
    implementation "androidx.media3:media3-exoplayer-dash:$media3_version"
    implementation "androidx.media3:media3-exoplayer-hls:$media3_version"
    implementation "androidx.media3:media3-exoplayer-rtsp:$media3_version"
    implementation "androidx.media3:media3-datasource-rtmp:$media3_version"
    implementation "androidx.media3:media3-common:$media3_version"
    implementation "io.github.anilbeesetti:nextlib-media3ext:1.10.1-0.13.0"

    implementation 'xyz.doikki.android.dkplayer:dkplayer-ui:3.3.7'
    implementation 'xyz.doikki.android.dkplayer:videocache:3.3.7'

    implementation 'com.lzy.net:okgo:3.0.4'
    implementation 'com.owen:tv-recyclerview:3.0.0'
    implementation 'com.blankj:utilcodex:1.31.1'
    implementation 'com.github.getActivity:XXPermissions:20.0'
    implementation 'org.jsoup:jsoup:1.22.2'
    implementation 'com.github.hedzr:android-file-chooser:v1.2.0-final'
    implementation 'commons-io:commons-io:2.22.0'
    implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
    implementation 'org.apache.commons:commons-text:1.15.0'
    implementation 'com.github.seven332:jcifs:1.3.19'
    implementation 'org.conscrypt:conscrypt-android:2.6.1'
    implementation 'io.github.inflationx:viewpump:2.1.1'
    implementation 'io.github.inflationx:calligraphy3:3.1.1'
    implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
    implementation('org.simpleframework:simple-xml:2.7.1') {
        exclude group: 'stax', module: 'stax-api'
        exclude group: 'xpp3', module: 'xpp3'
    }

    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.5")
    configurations {
        configureEach {
            exclude group: 'xpp3', module: 'xpp3'
        }
    }
}
